refactor: Add FindBugs annotations and update author in permission processor classes