@@ -2,24 +2,26 @@ package com.lambda.cloud.processor.permission.extractor;
 
 import com.lambda.cloud.processor.permission.model.ApiPermissionMetadata;
 import com.lambda.cloud.processor.permission.scanner.AnnotationScanner;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.util.*;
 import javax.lang.model.element.*;
 
 /**
  * 元数据提取器
- * 
+ *
  * <p>从注解中提取权限信息，构建 ApiPermissionMetadata 对象。
- * 
- * @author Lambda Cloud
+ *
+ * @author Jin
  */
+@SuppressFBWarnings("RCN_REDUNDANT_NULLCHECK_OF_NONNULL_VALUE")
 public class MetadataExtractor {
-    
+
     private final AnnotationScanner scanner;
-    
+
     public MetadataExtractor() {
         this.scanner = new AnnotationScanner();
     }
-    
+
     /**
      * 提取完整的 API 权限元数据
      */
@@ -56,10 +58,10 @@ public class MetadataExtractor {
 
         // 检查是否废弃
         metadata.setDeprecated(scanner.isDeprecated(method));
-        
+
         return metadata;
     }
-    
+
     /**
      * 提取类级别的路径
      */
@@ -67,7 +69,7 @@ public class MetadataExtractor {
         List<String> paths = scanner.scanRequestMapping(controller);
         return paths.isEmpty() ? "" : paths.getFirst();
     }
-    
+
     /**
      * 提取方法级别的路径
      */
@@ -75,14 +77,14 @@ public class MetadataExtractor {
         // 先检查 HTTP 方法映射注解的路径
         List<String> paths = scanner.scanHttpMethodMappingPath(method);
         if (!paths.isEmpty()) {
-            return paths.get(0);
+            return paths.getFirst();
         }
-        
+
         // 再检查 @RequestMapping
         paths = scanner.scanRequestMapping(method);
-        return paths.isEmpty() ? "" : paths.get(0);
+        return paths.isEmpty() ? "" : paths.getFirst();
     }
-    
+
     /**
      * 提取 HTTP 方法
      */
@@ -90,24 +92,24 @@ public class MetadataExtractor {
         String httpMethod = scanner.scanHttpMethodMapping(method);
         return httpMethod != null ? httpMethod : "GET";
     }
-    
+
     /**
      * 提取权限标识列表
      */
     public List<String> extractPermissions(TypeElement controller, ExecutableElement method) {
         Set<String> permissions = new LinkedHashSet<>();
-        
+
         // 提取类级别的权限
         permissions.addAll(scanner.scanSaCheckPermission(controller));
-        
+
         // 提取方法级别的权限
         permissions.addAll(scanner.scanSaCheckPermission(method));
-        
+
         // TODO: 支持自定义 @RequiresPermission 注解
-        
+
         return new ArrayList<>(permissions);
     }
-    
+
     /**
      * 提取权限逻辑（AND/OR）
      */
@@ -117,31 +119,31 @@ public class MetadataExtractor {
         if (mode != null) {
             return mode;
         }
-        
+
         // 检查类级别的 @SaCheckRole mode
         mode = scanner.scanSaCheckRoleMode(controller);
         if (mode != null) {
             return mode;
         }
-        
+
         return "AND";
     }
-    
+
     /**
      * 提取角色标识列表
      */
     public List<String> extractRoles(TypeElement controller, ExecutableElement method) {
         Set<String> roles = new LinkedHashSet<>();
-        
+
         // 提取类级别的角色
         roles.addAll(scanner.scanSaCheckRole(controller));
-        
+
         // 提取方法级别的角色
         roles.addAll(scanner.scanSaCheckRole(method));
-        
+
         return new ArrayList<>(roles);
     }
-    
+
     /**
      * 提取认证要求
      */
@@ -150,28 +152,28 @@ public class MetadataExtractor {
         if (scanner.requiresAuth(method) || scanner.requiresAuth(controller)) {
             return true;
         }
-        
+
         // 如果有权限或角色要求，默认需要认证
         List<String> permissions = extractPermissions(controller, method);
         List<String> roles = extractRoles(controller, method);
-        
+
         return !permissions.isEmpty() || !roles.isEmpty();
     }
-    
+
     /**
      * 提取接口描述
      */
     public String extractDescription(ExecutableElement method) {
         return scanner.scanOperationSummary(method);
     }
-    
+
     /**
      * 提取分组信息
      */
     public String extractGroup(TypeElement controller) {
         return scanner.scanTagName(controller);
     }
-    
+
     /**
      * 合并路径
      */
@@ -182,15 +184,15 @@ public class MetadataExtractor {
         if (methodPath == null || methodPath.isEmpty()) {
             return normalizePath(classPath);
         }
-        
+
         // 移除尾部斜杠
         classPath = classPath.replaceAll("/$", "");
         // 移除开头斜杠
         methodPath = methodPath.replaceAll("^/", "");
-        
+
         return normalizePath(classPath + "/" + methodPath);
     }
-    
+
     /**
      * 规范化路径
      */
